Add bootstrap template theme

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -5,35 +5,16 @@
     <meta name="viewport" content="width=devise-width">
     <title>Flask Tutorial</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/starter-template.css">
+    <link rel="stylesheet" href="static/css/jumbotron-narrow.css">
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Flask Tutorial</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{{url_for('index')}}">Home</a></li>
-            <li><a href="{{url_for('about')}}">About</a></li>
-            <li><a href="{{url_for('contact')}}">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
+    {% include "_header.html.j2" %}
     <div class="container">
       {% block content %}{% endblock %}
+      {% include "_footer.html.j2" %}
     </div>
-
     <script src="static/js/jquery-1.12.3.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
+    {% block js %}{% endblock %}
   </body>
 </html>
