--- a/templates/addname.html.j2
+++ b/templates/addname.html.j2
@@ -5,7 +5,7 @@
 </div>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <form action="{{url_for('addname')}}" method="post">
+      <form action="/create" method="post">
         <input name="firstname" placeholder="Enter your firstname" class="form-control"><br>
         <input name="lastname" placeholder="Enter your lastname" class="form-control"><br>
         <button type="submit" class="btn btn-primary">Submit</button>
