--- a/templates/contact.html.j2
+++ b/templates/contact.html.j2
@@ -1,4 +1,6 @@
 {% extends "base.html.j2" %}
 {% block content %}
-<h1>This is contact page</h1>
+  <div class="text-center">
+    <h1>This is contact page</h1>
+  </div>
 {% endblock %}
