Styling addname page

--- a/templates/addname.html.j2
+++ b/templates/addname.html.j2
@@ -11,5 +11,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-  </div>
+  </div> <br>
 {% endblock %}
