Add random restaurants funtion

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -6,6 +6,6 @@
   <div class="jumbotron text-center">
     <h1>This is index page</h1>
     <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn btn-lg btn-success" href="#" role="button">Random Restaurant</a></p>
+    <p><a class="btn btn-lg btn-success" href="{{url_for('random_restaurant')}}" role="button">Random Restaurant</a></p>
   </div>
 {% endblock %}
